--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 body {
-    padding: 3%;
-    height: 100vh;
-    width: 100vw;
+    background-color: #011627;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
